Purchase-requestのレスポンスを修正
